# pyexc

./: pyproject.toml
src/pyexc/: __init__.py  _config.py  _constants.py  _decorator.py  _utils.py
