[project]
name = "pyexc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Norbert Ormándi", email = "60075235+DeszkaCodes@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
