[project]
name = "pyexc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Norbert Ormándi", email = "60075235+DeszkaCodes@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6,<3.0.0",
    "tomli>=2.2.1,<3.0.0",
    "typing-extensions>=4.12.2,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "deptry>=0.23.0",
    "pytest>=8.3.4,<9.0.0",
]